; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_emu.c_emu_set_fastforward.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_emu.c_emu_set_fastforward.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@emu_set_fastforward.set_PsndOut = internal global i8* null, align 8
@emu_set_fastforward.set_Frameskip = internal global i32 0, align 4
@emu_set_fastforward.set_EmuOpt = internal global i32 0, align 4
@emu_set_fastforward.is_on = internal global i32 0, align 4
@PsndOut = common dso_local global i8* null, align 8
@currentConfig = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [13 x i8] c"FAST FORWARD\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emu_set_fastforward(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %17

5:                                                ; preds = %1
  %6 = load i32, i32* @emu_set_fastforward.is_on, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %17, label %8

8:                                                ; preds = %5
  %9 = load i8*, i8** @PsndOut, align 8
  store i8* %9, i8** @emu_set_fastforward.set_PsndOut, align 8
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 0), align 4
  store i32 %10, i32* @emu_set_fastforward.set_Frameskip, align 4
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 1), align 4
  store i32 %11, i32* @emu_set_fastforward.set_EmuOpt, align 4
  store i8* null, i8** @PsndOut, align 8
  store i32 8, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 0), align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 1), align 4
  %13 = and i32 %12, -5
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 1), align 4
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 1), align 4
  %15 = or i32 %14, 262144
  store i32 %15, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 1), align 4
  store i32 1, i32* @emu_set_fastforward.is_on, align 4
  %16 = call i32 @emu_status_msg(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  br label %29

17:                                               ; preds = %5, %1
  %18 = load i32, i32* %2, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %28, label %20

20:                                               ; preds = %17
  %21 = load i32, i32* @emu_set_fastforward.is_on, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %20
  %24 = load i8*, i8** @emu_set_fastforward.set_PsndOut, align 8
  store i8* %24, i8** @PsndOut, align 8
  %25 = load i32, i32* @emu_set_fastforward.set_Frameskip, align 4
  store i32 %25, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 0), align 4
  %26 = load i32, i32* @emu_set_fastforward.set_EmuOpt, align 4
  store i32 %26, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @currentConfig, i32 0, i32 1), align 4
  %27 = call i32 @PsndRerate(i32 1)
  store i32 0, i32* @emu_set_fastforward.is_on, align 4
  br label %28

28:                                               ; preds = %23, %20, %17
  br label %29

29:                                               ; preds = %28, %8
  ret void
}

declare dso_local i32 @emu_status_msg(i8*) #1

declare dso_local i32 @PsndRerate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
